[sh_test(
    name = "{test}".format(test=test),
    srcs = ["bazel_test.sh"],
    args = [],
    data = [
        "//:openroad",
    ] + glob(["*.sh", "*.ok"]),
    env = {
        "TEST_NAME_BAZEL": test,
        "OPENROAD_EXE": "../$(location //:openroad)",
        "TEST_EXT": "tcl",
        "TEST_CHECK_LOG": "True",
        "TEST_CHECK_PASSFAIL": "True",

    },
) for test in ["gcd_sky130hs", "place_inst"]]
