[sh_test(
    name = "{test}".format(test = test),
    srcs = ["bazel_test.sh"],
    args = [],
    data = [
        "//:openroad",
    ] + glob(["**/*"]),
    env = {
        "TEST_NAME_BAZEL": test,
        "OPENROAD_EXE": "$(location //:openroad)",
        "TEST_EXT": "tcl",
    },
) for test in [file.split(".")[0] for file in glob(
    ["*.tcl"],
    exclude = ["regression.tcl"],
)]]
